fix overflow

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100vh;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 20px;
     padding-top: 65px;
     padding-bottom: 60px;
